fix off-center register now button

--- a/src/components/main/Main.module.scss
+++ b/src/components/main/Main.module.scss
@@ -214,13 +214,13 @@ $loading-bar-transition: background-position 2s ease;
     }
     .register_button_text {
       font-size: 30px;
-      left: 125px;
+      left: 118px; 
       top: 25px;
     }
   }
   .loading_bar_position {
     top: 120px;
-    left: 130px;
+    left: 125px;
   }
   .loading_bar_mask {
     mask-size: 70%;
@@ -266,14 +266,14 @@ $loading-bar-transition: background-position 2s ease;
     }
     .register_button_text {
       top: 25px;
-      left: 80px;
+      left: 70px;
       font-size: 20px;
     }
   }
 
   .loading_bar_position {
     top: 126px;
-    left: 5px;
+    left: 0px;
   }
   .loading_bar_mask {
     mask-size: 70%;
